--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -252,6 +252,7 @@
             padding-top: 30px
             &--visible
                 display: block
+                overflow: auto
         &-menu
             flex-direction: column
             &__item
@@ -539,13 +540,13 @@
                     &--visible
                         margin-bottom: 17px
                         &:nth-child(1)
-                            margin-bottom: 29px
+                            margin-bottom: 32px
                         &:nth-child(2)
                             margin-bottom: 37px
                             margin-left: -47px
         &-bottom
             &--visible
-                top: 71px
+                top: 69px
                 padding-top: 10px
     .search
         &__input
